Added local setup using docker-compose plugin