@@ -1,6 +1,7 @@
 package ro.kudostech.kudconnect.usermanagement.adapters.input;
 
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -8,7 +9,6 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.security.Principal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/user")
@@ -18,7 +18,7 @@ public class UserController {
         JwtAuthenticationToken token = (JwtAuthenticationToken) principal;
         String userName = (String) token.getTokenAttributes().get("name");
         String userEmail = (String) token.getTokenAttributes().get("email");
-        List<String> roles = ((JwtAuthenticationToken) principal).getAuthorities().stream().map(a -> a.getAuthority()).collect(Collectors.toList());
+        List<String> roles = ((JwtAuthenticationToken) principal).getAuthorities().stream().map(GrantedAuthority::getAuthority).toList();
         return ResponseEntity.ok("Hello User \nUser Name : " + userName + "\nUser Email : " + userEmail + "\nRoles :" + roles);
     }
 }
